fix markdown description spacing

--- a/src/components/QuestDetails/index.module.scss
+++ b/src/components/QuestDetails/index.module.scss
@@ -19,7 +19,6 @@
 }
 
 .description {
-  white-space: pre-wrap;
   text-wrap: wrap;
   line-height: var(--space-xl);
 }
